discussion/kv_engine/171412/171412_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-30941: make unlocked functions take lock ref

Prefer that an unlocked function takes a reference to the required
lock in input. This doesn't completely resolve concurrent access issues
(e.g., there is no check that the right lock has been obtained), but
it is nonetheless a good reminder for callers.

Change-Id: I8289e6d61accdd9971b3a758b8b29085e0332b86

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-02-25 17:05:05.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Douglas
Date: 2022-02-25 17:06:52.000000000
Message: 
Patch Set 2:

(2 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-25 17:27:26.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15801/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15801/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15801/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44187/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [55/159]: stats curr_items DELETE...(151 ms) OK


99% tests passed, 2 tests failed out of 421

Total Test time (real) = 667.76 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44187/ )

Timeout of a CTest test 420/421 Test #293: ep_testsuite_dcp.full_eviction.magma ..........................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44187/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14649/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37220/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5454/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17888/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18596/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17559/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16625/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25962/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5513/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-02-28 09:07:59.000000000
Message: 
Patch Set 2: Code-Review-1

(1 comment)
Line:723, engines/ep/src/checkpoint_manager.h -> If you are going to add a new doxygen block to the method (which is generally a good thing), please also add a description of what the method does.

Otherwise it's ok to omit a doxygen comment if there wasn't one before your change - just if there is one, then a change should keep it up-to-date.

----------------------------------------------------------------------------------------------------------------------
Author: Douglas
Date: 2022-02-28 10:04:48.000000000
MISMATCHED INLINE COMMENT
Line:723, engines/ep/src/checkpoint_manager.h -> Done
----------------------------------------------------------------------------------------------------------------------
